--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "GPT-3 Writer",
-  "description": "Write a blog post in the style of your favorite thinker anywhere!",
+  "name": "generate a great news headline",
+  "description": "generate 10 news headlines ranked by seo performance",
   "version": "1.0",
   "manifest_version": 3,
   "icons": {
@@ -12,5 +12,7 @@
   "action": {
     "default_popup": "index.html",
     "default_title": "Generate blog post"
-  }
+  },
+  "permissions": ["contextMenus", "tabs", "storage"]
+
 }
