--- a/manifest.json
+++ b/manifest.json
@@ -13,10 +13,15 @@
     "default_popup": "index.html",
     "default_title": "Generate blog post"
   },
-
   "background": {
     "service_worker": "scripts/contextMenuServiceWorker.js"
   },
-  "permissions": ["contextMenus", "tabs", "storage"]
+  "permissions": ["contextMenus", "tabs", "storage"],
 
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["scripts/content.js"]
+    }
+  ]
 }
